<resources>
    <string name="app_name">MobileDevelopmentProject</string>
    <string name="addButtonText">+</string>
    <string name="addExpenseBtnText">Add Expense</string>
    <string name="addIncomeBtnText">Add Income</string>
    <string name="dataLabel">Date:</string>
    <string name="repeatLabel">Repeat Monthly:</string>
    <string name="catergoryLabel">Category:</string>
    <string name="amountLabel">Amount:</string>
    <string name="accountLabel">Account:</string>
    <string name="addPhoto">Add Photo:</string>
    <string name="buttonLabelIncome">Add Income</string>
    <string name="buttonLabelExpense">Add Expense</string>
    <string name="dateHint">MMM, DD, YYYY</string>
    <string name="categoryHint">Pick a Category</string>
    <string name="noteLabel">Note:</string>
    <string name="hintNote">Area to Provide Details on the Expense</string>
    <string name="hintAmount">Amount in Dollars</string>
    <string name="hintIncomeNote">Area to Provide Details on Earned Income</string>
    <string name="contentAddPhotoDesc">Add a Photo</string>

    <string-array name="categories">
        <item>Auto</item>
        <item>Cable Bill</item>
        <item>Cell Phone Bill</item>
        <item>Clothing</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Gifts</item>
        <item>Groceries</item>
        <item>Household</item>
        <item>House Phone Bill</item>
        <item>Hydro Bill</item>
        <item>Internet Bill</item>
        <item>Mortage</item>
        <item>Pets</item>
        <item>Rent</item>
        <item>Transportation</item>
        <item>Travel</item>
        <item>Other</item>
    </string-array>
</resources>
