<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joy.mobiledevelopmentproject.MainActivity"

    android:clickable="true">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthlyCheckbox"
        android:layout_alignBaseline="@+id/repeatLabel"
        android:layout_alignBottom="@+id/repeatLabel"
        android:layout_toRightOf="@+id/addExpense"
        android:layout_toEndOf="@+id/addExpense" />

    <TextView
        android:text="@string/buttonLabelExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expenseLabelBtn"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/addPhotoButton"
        android:layout_alignBottom="@+id/addPhotoText"
        android:layout_alignRight="@+id/monthlyCheckbox"
        android:layout_alignEnd="@+id/monthlyCheckbox"
        android:contentDescription="@string/contentAddPhotoDesc" />

    <TextView
        android:text="@string/amountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountLabel"
        android:textSize="20sp"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/categoryLabel"
        android:layout_toLeftOf="@+id/expenseLabelBtn"
        android:layout_toStartOf="@+id/expenseLabelBtn" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/noteText"
        android:hint="@string/hintNote"
        android:layout_alignBaseline="@+id/noteLabel"
        android:layout_alignBottom="@+id/noteLabel"
        android:layout_toRightOf="@+id/categoryLabel"
        android:layout_toEndOf="@+id/categoryLabel" />

    <TextView
        android:text="@string/noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noteLabel"
        android:textSize="20sp"
        android:layout_below="@+id/addPhotoText"
        android:layout_alignLeft="@+id/addPhotoText"
        android:layout_alignStart="@+id/addPhotoText"
        android:layout_marginTop="51dp" />

    <TextView
        android:text="@string/catergoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/categoryLabel"
        android:textSize="20sp"
        android:layout_below="@+id/monthlyCheckbox"
        android:layout_alignLeft="@+id/amountLabel"
        android:layout_alignStart="@+id/amountLabel" />

    <TextView
        android:text="@string/repeatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/repeatLabel"
        android:textSize="20sp"
        android:layout_below="@+id/dateText"
        android:layout_alignLeft="@+id/categoryLabel"
        android:layout_alignStart="@+id/categoryLabel" />

    <TextView
        android:text="@string/dataLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/dateLabelIncome"
        android:textSize="20sp"
        android:layout_below="@+id/expenseLabelBtn"
        android:layout_alignLeft="@+id/repeatLabel"
        android:layout_alignStart="@+id/repeatLabel" />

    <Button
        android:text="@string/addExpenseBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addExpense"
        android:background="@android:color/holo_green_dark"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignBottom="@+id/amountLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/amountText"
        android:hint="@string/hintAmount"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/categorySpinner"
        android:layout_alignStart="@+id/categorySpinner" />

    <TextView
        android:text="@string/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addPhotoText"
        android:textSize="20sp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/amountLabel"
        android:layout_alignLeft="@+id/amountLabel"
        android:layout_alignStart="@+id/amountLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dateText"
        android:hint="@string/dateHint"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/dateLabelIncome"
        android:layout_alignBottom="@+id/dateLabelIncome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/repeatLabel"
        android:layout_toEndOf="@+id/repeatLabel" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/categorySpinner"
        android:layout_width="150sp"
        android:entries="@array/categories"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/categoryLabel"
        android:layout_toEndOf="@+id/repeatLabel"
        android:layout_toRightOf="@+id/repeatLabel" />

</RelativeLayout>
